fix the mess I dont know how I did it and create user model

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,49 +1,21 @@
-<<<<<<< HEAD
 default: &default
   adapter: postgresql
   encoding: unicode
-  database: Challenge_development
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: Challenge
-  password: 
+  pool: <%= ENV.fetch('RAILS_MAX_THREADS') { 5 } %>
+  host: localhost
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
 
 development:
   <<: *default
-  database: Challenge_development
+  database: <%= "#{ENV['DATABASE_NAME']}_development" %>
 
 test:
   <<: *default
-  database: Challenge_test
+  database: <%= "#{ENV['DATABASE_NAME']}_test" %>
 
 production:
   <<: *default
-  database: Challenge_production
-  username: Challenge
-  password: <%= ENV['CHALLENGE_DATABASE_PASSWORD'] %>
-=======
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
-
-development:
-  <<: *default
-  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
-
-production:
-  <<: *default
-  database: db/production.sqlite3
->>>>>>> b6cc376fa5d2e4f6c7ce0ada77901110b8046826
+  database: <%= "#{ENV['DATABASE_NAME']}_production" %>
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
