--- a/config/database.yml
+++ b/config/database.yml
@@ -1,12 +1,13 @@
 default: &default
-  adapter:  postgresql
+  adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: mp
-  password: <%= ENV['CHALLENGE_DATABASE_PASSWORD']%>
+  password: <%= ENV['CHALLENGE_DATABASE_PASSWORD'] %>
 
 development:
-  <<: *default  
+  <<: *default
   database: challenge1_development
-  
 
+test:
+  <<: *default
+  database: challenge1_test
