--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,14 +4,24 @@ Rails:
   Enabled: true
 
 AllCops:
-  TargetRubyVersion: 2.6
-
-  Include:
-    - '**/config.ru'
+  TargetRubyVersion: 2.7.2
   Exclude:
-    - 'vendor/**/*'
-    - 'db/**/*'
-    - 'db/schema.rb'
+    - bin/**/*
+    - db/**/*
+    - db/schema.rb
+    - vendor/**/*
 
 Style/Documentation:
   Enabled: false
+
+Layout/LineLength:
+  Max: 120
+
+Metrics/BlockLength:
+  Exclude:
+    - spec/**/*
+    - config/**/*
+
+Metrics/ModuleLength:
+  Exclude:
+    - spec/**/*
